<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.rajeevsawant.justjava.MainActivity">


        <EditText
            style="@style/HeaderTextStyle"
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:backgroundTint="@android:color/holo_blue_light"
            android:hint="@string/name"
            android:inputType="textPersonName|textCapSentences|textAutoCorrect" />


        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/whipped_cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:onClick="whippedCreamPrice"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/whipped_cream"
                android:textColor="#000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox_chocolate_cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:onClick="chocolatePrice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Chocolate"
                android:textColor="#000"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/quantity_text_view"
            style="@style/HeaderTextStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:onClick="decrementQuantity"
                android:text="-" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="0"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:onClick="incrementQuantity"
                android:text="+" />


        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/order_summary" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="$0"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="submitOrder"
            android:text="@string/order" />
    </LinearLayout>
</ScrollView>